fixed sizes of text displays on mobile. Fixed Portfolio section with sizes too

--- a/src/Components/Cursor/cursor.css
+++ b/src/Components/Cursor/cursor.css
@@ -5,3 +5,9 @@
 .mf-cursor .mf-cursor-text {
   color: black; /* Change the color of the text inside the cursor */
 }
+
+@media (max-width: 890px) {
+  .mf-cursor {
+    display: none;
+  }
+}
