--- a/src/Components/Home/TechStack/TechStack.css
+++ b/src/Components/Home/TechStack/TechStack.css
@@ -4,8 +4,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
- padding-top: 20vh;
- padding-bottom: 15vh;
+ padding-top: 5%;
+ padding-bottom: 5%;
 }
 
 .skills h1 {
